# SCZR_RPI_FaceDetection

./: .gitignore  .rpi3config  sczr_cfg
board/raspberrypi/: genimage-raspberrypi3-64.cfg  interfaces  post-build.sh  wpa_supplicant.conf
configs/: raspberrypi3_64_custom_defconfig
package/: Config.in
package/hello/: Config.in  hello.mk
package/hello/.metadata/: version.ini
package/hello/.metadata/.plugins/org.eclipse.cdt.core/: AISDI.language.settings.xml  arko_koch.1605288721589.pdom  curses.1605288709159.pdom  curses.language.settings.xml  game_of_life.1605288715068.pdom  hash.1605288721483.pdom  lab_0.language.settings.xml  lab_1.1605288721224.pdom  lab_1.language.settings.xml  lab_2.1605288712562.pdom  lab_2.language.settings.xml  lab_3.1605288721365.pdom  lab_3.language.settings.xml  maly_intel.1605288713873.pdom  soi_efi.1605288721591.pdom  testpr.1605288710343.pdom  testpr.language.settings.xml  yajl.1605288716347.pdom
package/hello/.metadata/.plugins/org.eclipse.core.resources/: 0.snap
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/AISDI/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/AISDI/.indexes/: properties.index
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/Genetic-Algorithm-for-the-Traveling-Salesman-Problem/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/arko_koch/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/arko_koch/.indexes/: properties.index
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/checkers/: .location  .markers  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/curses/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/curses/.indexes/: properties.index
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/eclipse-workspace/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/game_of_life/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/hash/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/hellopython/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/lab_0/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/lab_0bug/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/lab_1/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/lab_2/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/lab_3/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/maly_intel/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/proz_checkers/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/soi_efi/: .location
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/src/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/testpr/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.projects/yajl/: .location  1.tree
package/hello/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
package/hello/.metadata/.plugins/org.eclipse.jdt.core/: 380923500.index  externalLibsTimeStamps  savedIndexNames.txt
package/hello/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml
package/hello/.metadata/.plugins/org.eclipse.m2e.core/: workspacestate.properties
package/hello/.metadata/.plugins/org.eclipse.m2e.core/nexus/05b0fe8524860bd73cbb07ef30fb34cc/: segments_2
package/hello/.metadata/.plugins/org.eclipse.m2e.core/nexus/830bc118332e77292949ed1e6d2fabe0/: _1.cfs  _2.cfs  segments_4
package/hello/.metadata/.plugins/org.eclipse.m2e.core/nexus/e5970c9ebf03be2e078f108b6a8cdb0d/: _0.cfs  segments_2
package/hello/.metadata/.plugins/org.eclipse.m2e.jdt/: checkers.container
package/hello/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
package/hello/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
package/hello/src/: CMakeLists.txt  bmakefile  hello.cpp  proc_a.cpp  proc_b.cpp  proc_c.cpp  proc_d.cpp
sczr/: CMakeLists.txt
sczr/src/: memfile.hpp  my_sched.hpp  proc_a.cpp  proc_b.cpp  proc_c.cpp  proc_d.cpp  shared_memory.hpp
(+17 files in other folders)
